--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.16.0",
     "cors": "^2.8.1",
+    "dotenv": "^4.0.0",
     "express": "^4.14.1"
   }
 }
