--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "body-parser": "^1.16.0",
     "cors": "^2.8.1",
     "dotenv": "^4.0.0",
-    "express": "^4.14.1"
+    "express": "^4.14.1",
+    "swagger-jsdoc": "^1.3.0",
+    "swagger-node-express": "^2.1.3"
   }
 }
